Solved navbar wehen dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,6 @@
   animation: buttonAni 5s infinite ease-in-out;
 }
 
-
-
 @keyframes buttonAni {
   0% {
     border-left-color: #d29afb;
@@ -40,19 +38,17 @@
 }
 
 .main-nav-link {
-  background-image: linear-gradient(to right, #7f80fe, #d29afb 50%, #000 50%);
+  background-image: linear-gradient(to right, transparent, transparent 50%);
   background-size: 200% 100%;
   background-position: -100%;
   display: inline-block;
   padding: 5px 0;
   position: relative;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   transition: all 0.3s ease-in-out;
 }
 
 .main-nav-active {
-  background-image: linear-gradient(to right, #7f80fe, #d29afb 50%, #000 50%);
+  background-image: linear-gradient(to right, #7f80fe, #d29afb 50%);
   background-size: 200% 100%;
   background-position: 0;
   display: inline-block;
@@ -65,6 +61,9 @@
 
 .main-nav-link:hover {
   background-position: 0;
+  background-image: linear-gradient(to right, #7f80fe, #d29afb 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .main-nav-link:before {
